[package]
name = "muter"
version = "0.1.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]

[lib]
name = "muter"
path = "src/lib/mod.rs"

[[bin]]
name = "muter"
path = "src/main.rs"

[build-dependencies]
autocfg = "0.1"

[dependencies]
clap = "2.32.0"
digest = "0.8"
blake2 = "0.8"
md-5 = "0.8"
sha-1 = "0.8"
sha2 = "0.8"
sha3 = "0.8"

[dev-dependencies]
rand_core = "0.4"
rand_chacha = "0.1"
