[package]
name = "muter"
version = "0.4.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
license = "MIT"
repository = "https://github.com/bk2204/muter"
description = "utility for converting data between various formats and encodings"
exclude = [".github/**", ".gitignore", "Makefile", "test/**", "doc/**"]

[lib]
name = "muter"
path = "src/lib/mod.rs"

[[bin]]
name = "muter"
path = "src/main.rs"

[build-dependencies]
autocfg = "0.1"

[dependencies]
clap = "2.32.0"
digest = "0.8"
blake2 = "0.8"
md-5 = "0.8"
multi_reader = "0.1"
sha-1 = "0.8"
sha2 = "0.8"
sha3 = "0.8"
rand_core = "0.4"
rand_chacha = "0.1"

[dev-dependencies]
pretty_assertions = "0.5"
