[package]
name = "muter"
version = "0.4.0"
authors = ["brian m. carlson <sandals@crustytoothpaste.net>"]
license = "MIT"
repository = "https://github.com/bk2204/muter"
description = "utility for converting data between various formats and encodings"
exclude = ["README.adoc", ".github/**", ".gitignore", "Makefile", "test/**", "doc/**"]
categories = ["command-line-utilities", "encoding"]
keywords = ["encoding"]

[lib]
name = "muter"
path = "src/lib/mod.rs"

[[bin]]
name = "muter"
path = "src/main.rs"

[build-dependencies]
autocfg = "0.1"

[dependencies]
clap = "2.32.0"
digest = "0.8"
blake2 = "0.8"
md-5 = "0.8"
multi_reader = "0.1"
sha-1 = "0.8"
sha2 = "0.8"
sha3 = "0.8"
rand_core = "0.4"
rand_chacha = "0.1"
tr = "0.1"
gettext-rs = { version = "0.4", features = ["gettext-system"] }

[dev-dependencies]
pretty_assertions = "0.5"

[package.metadata.deb]
name = "muter"
license-file = ["LICENSE", "0"]
changelog = "CHANGELOG"
extended-description = """\
Muter manipulates streams of bytes, encoding and decoding them in various ways,
such as base64 and URI percent-encoding, among others.  It is designed to be
fast, portable, and flexible.
"""
section = "utils"
priority = "optional"
revision = "1"
assets = [
    ["target/release/muter", "usr/bin/", "755"],
    ["doc/man/muter.1", "usr/share/man/man1/", "644"],
]
